<resources>
    <string name="app_name">TimeCapsule</string>
    <string name="logo">logo</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="info">INFO</string>
    <string name="display">DISPLAY</string>
    <string name="title">Enter Title</string>
    <string name="date">Pick the date</string>
    <string name="memos">Enter your memories</string>
    <string name="quote">Whatever you have done today , We hope it was good!</string>
    <string name="chefimg">chef</string>
    <string name="name">Name</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="image_for_login">image for login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="image_for_signup">image for signup</string>
    <string name="enter_your_name">Enter Title</string>
    <string name="memories">Enter data to modify</string>
    <string name="enter_date">Pick a date</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="modify">MODIFY</string>
    <string name="n">TODO</string>
    <string name="maintitle">[Time Capsule]</string>
    <string name="signoutbut">Signout</string>
    <string name="display2">[Display]</string>
    <string name="enter_title2">Enter Title</string>
    <string name="pick_the_date2">Pick the date</string>
    <string name="choose_date_and_title_to_display2">Choose Date and Title to Display</string>
    <string name="display3">Display</string>
    <string name="dob">Enter DOB</string>
</resources>
