<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back4"
    tools:context=".Update">

    <EditText
        android:id="@+id/ET1"
        android:layout_width="316dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:autofillHints=""
        android:drawableStart="@drawable/penicon1"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:targetApi="o"
        android:drawableLeft="@drawable/penicon1" />

    <EditText
        android:id="@+id/ET2"
        android:layout_width="311dp"
        android:layout_height="154dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/memories"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="144dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="95dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/n"
        app:layout_constraintBottom_toTopOf="@+id/ET1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="307dp"
        android:layout_height="55dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/pick_a_date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:drawableStart="@drawable/ic_date_3"
        android:drawablePadding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/ET2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET1"
        android:drawableLeft="@drawable/ic_date_3" />

    <Button
        android:id="@+id/button"
        android:layout_width="192dp"
        android:layout_height="49dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#F64E8B"
        android:text="@string/modify"
        android:textColor="#100F0F"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ET2" />


</androidx.constraintlayout.widget.ConstraintLayout>