<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back6new"
    tools:context=".Display">

    <EditText
        android:id="@+id/disp_title"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="54dp"
        android:backgroundTint="#05325A"
        android:drawableStart="@drawable/penicon2"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/enter_title2"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#05325A"
        app:layout_constraintBottom_toTopOf="@+id/disp_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disp_text"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="54dp"
        android:drawableLeft="@drawable/penicon2" />

    <EditText
        android:id="@+id/disp_date"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="54dp"
        android:backgroundTint="#05325A"
        android:drawableStart="@drawable/ic_date_2"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/pick_the_date2"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColor="#05325A"
        app:layout_constraintBottom_toTopOf="@+id/disp_memos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disp_title"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="54dp"
        android:drawableLeft="@drawable/ic_date_2" />

    <TextView
        android:id="@+id/disp_memos"
        android:layout_width="301dp"
        android:layout_height="223dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="54dp"
        android:hint="@string/choose_date_and_title_to_display2"
        android:textAlignment="textStart"
        android:textColor="#05325A"
        android:textSize="18sp"

        app:layout_constraintBottom_toTopOf="@+id/disp_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disp_date"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="54dp"
        android:gravity="start" />

    <Button
        android:id="@+id/disp_button"
        android:layout_width="180dp"
        android:layout_height="53dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#2CA8E4"
        android:text="@string/display3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disp_memos"
        android:layout_marginLeft="117dp"
        android:layout_marginRight="118dp" />

    <TextView
        android:id="@+id/disp_text"
        android:layout_width="301dp"
        android:layout_height="68dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="55dp"
        android:fontFamily="@font/countryside"
        android:text="@string/display2"
        android:textAlignment="center"
        android:textColor="#05325A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/disp_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="55dp" />

</androidx.constraintlayout.widget.ConstraintLayout>