<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ds"
    tools:context=".Dashboard">

    <Button
        android:id="@+id/button"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginLeft="58dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/draw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginLeft="97dp"
        android:layout_marginRight="58dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/add5"
        android:layout_marginLeft="97dp"
        android:layout_marginRight="58dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="99dp"
        android:layout_height="90dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="31dp"
        android:background="@drawable/eye"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add"
        android:layout_marginLeft="58dp" />

    <TextView
        android:id="@+id/add"
        android:layout_width="112dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="31dp"
        android:text="@string/add"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/add5"
        android:layout_width="112dp"
        android:layout_height="25dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="50dp"
        android:text="@string/update"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        android:layout_marginLeft="83dp"
        android:layout_marginRight="50dp" />

    <TextView
        android:id="@+id/add4"
        android:layout_width="112dp"
        android:layout_height="25dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="31dp"
        android:text="@string/display"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        android:layout_marginLeft="50dp" />

    <TextView
        android:id="@+id/add2"
        android:layout_width="112dp"
        android:layout_height="25dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="50dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add4"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        android:layout_marginLeft="82dp"
        android:layout_marginRight="50dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="287dp"
        android:layout_height="71dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="69dp"
        android:fontFamily="@font/countryside"
        android:text="@string/maintitle"
        android:textAlignment="center"
        android:textColor="#0B0000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout"
        android:layout_width="136dp"
        android:layout_height="51dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="94dp"
        android:backgroundTint="#F63030"
        android:text="@string/signoutbut"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add4" />

</androidx.constraintlayout.widget.ConstraintLayout>