<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context=".Create">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/chefimg"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toStartOf="@+id/pgd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/chefsplash"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="7dp" />

    <TextView
        android:id="@+id/pgd"
        android:layout_width="243dp"
        android:layout_height="106dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:text="@string/quote"
        android:textAlignment="center"
        android:textColor="#05325A"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="313dp"
        android:layout_height="52dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#073A68"
        android:ems="10"
        android:hint="@string/title"
        android:drawableStart="@drawable/penicon2"
        android:drawablePadding="15dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#0E2379"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pgd"
        android:drawableLeft="@drawable/penicon2" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="311dp"
        android:layout_height="170dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#164670"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/memos"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:overScrollMode="always"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:textAlignment="textStart"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0E2379"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/click"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/date"
        android:layout_width="311dp"
        android:layout_height="44dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#12385A"
        android:drawableStart="@drawable/ic_date_2"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textAlignment="textStart"
        android:textColor="#0E2379"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:gravity="start"
        android:drawableLeft="@drawable/ic_date_2" />

    <Button
        android:id="@+id/click"
        android:layout_width="218dp"
        android:layout_height="52dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#2CA8E4"
        android:text="CREATE"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc"
        android:layout_marginLeft="99dp"
        android:layout_marginRight="100dp" />

</androidx.constraintlayout.widget.ConstraintLayout>